SQL_InterpreterParser.py
# Generated from SQL_Interpreter.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SQL_InterpreterParser ( Parser ):

    grammarFileName = "SQL_Interpreter.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "','", "';'", 
                     "'='", "'::'", "'*'" ]

    symbolicNames = [ "<INVALID>", "CREATE", "TABLE", "DROP", "SHOW", "TABLES", 
                      "INSERT", "INTO", "VALUES", "SELECT", "FROM", "WHERE", 
                      "INTEGER", "INT", "SMALLINT", "TINYINT", "UNSIGNED", 
                      "NUMERIC", "NULL", "STRING", "VARCHAR", "CHARVAR", 
                      "CHAR", "DATETIME", "TIMESTAMP", "BLOB", "SUBTYPE", 
                      "DECIMAL", "YEAR", "QUOTE", "LPAREN", "RPAREN", "COMMA", 
                      "SEMICOLON", "EQUAL", "DOUBLE_COLON", "ASTERISK", 
                      "SPACES", "NUMBER", "REAL", "NAME" ]

    RULE_statements = 0
    RULE_statement = 1
    RULE_createStmt = 2
    RULE_dropStmt = 3
    RULE_showStmt = 4
    RULE_insertStmt = 5
    RULE_selectStmtFrom = 6
    RULE_selectStmtStar = 7
    RULE_selectStmtWhere = 8
    RULE_element = 9
    RULE_definition = 10
    RULE_type = 11
    RULE_name = 12
    RULE_columnValue = 13

    ruleNames =  [ "statements", "statement", "createStmt", "dropStmt", 
                   "showStmt", "insertStmt", "selectStmtFrom", "selectStmtStar", 
                   "selectStmtWhere", "element", "definition", "type", "name", 
                   "columnValue" ]

    EOF = Token.EOF
    CREATE=1
    TABLE=2
    DROP=3
    SHOW=4
    TABLES=5
    INSERT=6
    INTO=7
    VALUES=8
    SELECT=9
    FROM=10
    WHERE=11
    INTEGER=12
    INT=13
    SMALLINT=14
    TINYINT=15
    UNSIGNED=16
    NUMERIC=17
    NULL=18
    STRING=19
    VARCHAR=20
    CHARVAR=21
    CHAR=22
    DATETIME=23
    TIMESTAMP=24
    BLOB=25
    SUBTYPE=26
    DECIMAL=27
    YEAR=28
    QUOTE=29
    LPAREN=30
    RPAREN=31
    COMMA=32
    SEMICOLON=33
    EQUAL=34
    DOUBLE_COLON=35
    ASTERISK=36
    SPACES=37
    NUMBER=38
    REAL=39
    NAME=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.StatementContext,0)


        def EOF(self):
            return self.getToken(SQL_InterpreterParser.EOF, 0)

        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = SQL_InterpreterParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.statement()
            self.state = 29
            self.match(SQL_InterpreterParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createStmt(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.CreateStmtContext,0)


        def dropStmt(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.DropStmtContext,0)


        def showStmt(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.ShowStmtContext,0)


        def insertStmt(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.InsertStmtContext,0)


        def selectStmtFrom(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.SelectStmtFromContext,0)


        def selectStmtStar(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.SelectStmtStarContext,0)


        def selectStmtWhere(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.SelectStmtWhereContext,0)


        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SQL_InterpreterParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.createStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.dropStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.showStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 34
                self.insertStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 35
                self.selectStmtFrom()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 36
                self.selectStmtStar()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 37
                self.selectStmtWhere()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # NameContext

        def CREATE(self):
            return self.getToken(SQL_InterpreterParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(SQL_InterpreterParser.TABLE, 0)

        def LPAREN(self):
            return self.getToken(SQL_InterpreterParser.LPAREN, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQL_InterpreterParser.ElementContext)
            else:
                return self.getTypedRuleContext(SQL_InterpreterParser.ElementContext,i)


        def RPAREN(self):
            return self.getToken(SQL_InterpreterParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(SQL_InterpreterParser.SEMICOLON, 0)

        def name(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.NameContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQL_InterpreterParser.COMMA)
            else:
                return self.getToken(SQL_InterpreterParser.COMMA, i)

        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_createStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateStmt" ):
                listener.enterCreateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateStmt" ):
                listener.exitCreateStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateStmt" ):
                return visitor.visitCreateStmt(self)
            else:
                return visitor.visitChildren(self)




    def createStmt(self):

        localctx = SQL_InterpreterParser.CreateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(SQL_InterpreterParser.CREATE)
            self.state = 41
            self.match(SQL_InterpreterParser.TABLE)
            self.state = 42
            localctx.tableName = self.name()
            self.state = 43
            self.match(SQL_InterpreterParser.LPAREN)
            self.state = 44
            self.element()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQL_InterpreterParser.COMMA:
                self.state = 45
                self.match(SQL_InterpreterParser.COMMA)
                self.state = 46
                self.element()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(SQL_InterpreterParser.RPAREN)
            self.state = 53
            self.match(SQL_InterpreterParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DropStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # NameContext

        def DROP(self):
            return self.getToken(SQL_InterpreterParser.DROP, 0)

        def TABLE(self):
            return self.getToken(SQL_InterpreterParser.TABLE, 0)

        def SEMICOLON(self):
            return self.getToken(SQL_InterpreterParser.SEMICOLON, 0)

        def name(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.NameContext,0)


        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_dropStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDropStmt" ):
                listener.enterDropStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDropStmt" ):
                listener.exitDropStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDropStmt" ):
                return visitor.visitDropStmt(self)
            else:
                return visitor.visitChildren(self)




    def dropStmt(self):

        localctx = SQL_InterpreterParser.DropStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dropStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(SQL_InterpreterParser.DROP)
            self.state = 56
            self.match(SQL_InterpreterParser.TABLE)
            self.state = 57
            localctx.tableName = self.name()
            self.state = 58
            self.match(SQL_InterpreterParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(SQL_InterpreterParser.SHOW, 0)

        def TABLES(self):
            return self.getToken(SQL_InterpreterParser.TABLES, 0)

        def SEMICOLON(self):
            return self.getToken(SQL_InterpreterParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_showStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowStmt" ):
                listener.enterShowStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowStmt" ):
                listener.exitShowStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowStmt" ):
                return visitor.visitShowStmt(self)
            else:
                return visitor.visitChildren(self)




    def showStmt(self):

        localctx = SQL_InterpreterParser.ShowStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_showStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(SQL_InterpreterParser.SHOW)
            self.state = 61
            self.match(SQL_InterpreterParser.TABLES)
            self.state = 62
            self.match(SQL_InterpreterParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # NameContext

        def INSERT(self):
            return self.getToken(SQL_InterpreterParser.INSERT, 0)

        def INTO(self):
            return self.getToken(SQL_InterpreterParser.INTO, 0)

        def VALUES(self):
            return self.getToken(SQL_InterpreterParser.VALUES, 0)

        def LPAREN(self):
            return self.getToken(SQL_InterpreterParser.LPAREN, 0)

        def columnValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQL_InterpreterParser.ColumnValueContext)
            else:
                return self.getTypedRuleContext(SQL_InterpreterParser.ColumnValueContext,i)


        def RPAREN(self):
            return self.getToken(SQL_InterpreterParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(SQL_InterpreterParser.SEMICOLON, 0)

        def name(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.NameContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQL_InterpreterParser.COMMA)
            else:
                return self.getToken(SQL_InterpreterParser.COMMA, i)

        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_insertStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStmt" ):
                listener.enterInsertStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStmt" ):
                listener.exitInsertStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsertStmt" ):
                return visitor.visitInsertStmt(self)
            else:
                return visitor.visitChildren(self)




    def insertStmt(self):

        localctx = SQL_InterpreterParser.InsertStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_insertStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(SQL_InterpreterParser.INSERT)
            self.state = 65
            self.match(SQL_InterpreterParser.INTO)
            self.state = 66
            localctx.tableName = self.name()
            self.state = 67
            self.match(SQL_InterpreterParser.VALUES)
            self.state = 68
            self.match(SQL_InterpreterParser.LPAREN)
            self.state = 69
            self.columnValue()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQL_InterpreterParser.COMMA:
                self.state = 70
                self.match(SQL_InterpreterParser.COMMA)
                self.state = 71
                self.columnValue()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(SQL_InterpreterParser.RPAREN)
            self.state = 78
            self.match(SQL_InterpreterParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStmtFromContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # NameContext

        def SELECT(self):
            return self.getToken(SQL_InterpreterParser.SELECT, 0)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQL_InterpreterParser.NameContext)
            else:
                return self.getTypedRuleContext(SQL_InterpreterParser.NameContext,i)


        def FROM(self):
            return self.getToken(SQL_InterpreterParser.FROM, 0)

        def SEMICOLON(self):
            return self.getToken(SQL_InterpreterParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQL_InterpreterParser.COMMA)
            else:
                return self.getToken(SQL_InterpreterParser.COMMA, i)

        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_selectStmtFrom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStmtFrom" ):
                listener.enterSelectStmtFrom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStmtFrom" ):
                listener.exitSelectStmtFrom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStmtFrom" ):
                return visitor.visitSelectStmtFrom(self)
            else:
                return visitor.visitChildren(self)




    def selectStmtFrom(self):

        localctx = SQL_InterpreterParser.SelectStmtFromContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_selectStmtFrom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(SQL_InterpreterParser.SELECT)
            self.state = 81
            self.name()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQL_InterpreterParser.COMMA:
                self.state = 82
                self.match(SQL_InterpreterParser.COMMA)
                self.state = 83
                self.name()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(SQL_InterpreterParser.FROM)
            self.state = 90
            localctx.tableName = self.name()
            self.state = 91
            self.match(SQL_InterpreterParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStmtStarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # NameContext

        def SELECT(self):
            return self.getToken(SQL_InterpreterParser.SELECT, 0)

        def ASTERISK(self):
            return self.getToken(SQL_InterpreterParser.ASTERISK, 0)

        def FROM(self):
            return self.getToken(SQL_InterpreterParser.FROM, 0)

        def SEMICOLON(self):
            return self.getToken(SQL_InterpreterParser.SEMICOLON, 0)

        def name(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.NameContext,0)


        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_selectStmtStar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStmtStar" ):
                listener.enterSelectStmtStar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStmtStar" ):
                listener.exitSelectStmtStar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStmtStar" ):
                return visitor.visitSelectStmtStar(self)
            else:
                return visitor.visitChildren(self)




    def selectStmtStar(self):

        localctx = SQL_InterpreterParser.SelectStmtStarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectStmtStar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(SQL_InterpreterParser.SELECT)
            self.state = 94
            self.match(SQL_InterpreterParser.ASTERISK)
            self.state = 95
            self.match(SQL_InterpreterParser.FROM)
            self.state = 96
            localctx.tableName = self.name()
            self.state = 97
            self.match(SQL_InterpreterParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStmtWhereContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # NameContext

        def SELECT(self):
            return self.getToken(SQL_InterpreterParser.SELECT, 0)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQL_InterpreterParser.NameContext)
            else:
                return self.getTypedRuleContext(SQL_InterpreterParser.NameContext,i)


        def FROM(self):
            return self.getToken(SQL_InterpreterParser.FROM, 0)

        def WHERE(self):
            return self.getToken(SQL_InterpreterParser.WHERE, 0)

        def EQUAL(self):
            return self.getToken(SQL_InterpreterParser.EQUAL, 0)

        def columnValue(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.ColumnValueContext,0)


        def SEMICOLON(self):
            return self.getToken(SQL_InterpreterParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQL_InterpreterParser.COMMA)
            else:
                return self.getToken(SQL_InterpreterParser.COMMA, i)

        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_selectStmtWhere

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStmtWhere" ):
                listener.enterSelectStmtWhere(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStmtWhere" ):
                listener.exitSelectStmtWhere(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStmtWhere" ):
                return visitor.visitSelectStmtWhere(self)
            else:
                return visitor.visitChildren(self)




    def selectStmtWhere(self):

        localctx = SQL_InterpreterParser.SelectStmtWhereContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_selectStmtWhere)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(SQL_InterpreterParser.SELECT)
            self.state = 100
            self.name()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQL_InterpreterParser.COMMA:
                self.state = 101
                self.match(SQL_InterpreterParser.COMMA)
                self.state = 102
                self.name()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(SQL_InterpreterParser.FROM)
            self.state = 109
            localctx.tableName = self.name()
            self.state = 110
            self.match(SQL_InterpreterParser.WHERE)
            self.state = 111
            self.name()
            self.state = 112
            self.match(SQL_InterpreterParser.EQUAL)
            self.state = 113
            self.columnValue()
            self.state = 114
            self.match(SQL_InterpreterParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.DefinitionContext,0)


        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = SQL_InterpreterParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.definition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.NameContext,0)


        def type(self):
            return self.getTypedRuleContext(SQL_InterpreterParser.TypeContext,0)


        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = SQL_InterpreterParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.name()
            self.state = 119
            self.type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQL_InterpreterParser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IntegerTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQL_InterpreterParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(SQL_InterpreterParser.INTEGER, 0)
        def INT(self):
            return self.getToken(SQL_InterpreterParser.INT, 0)
        def UNSIGNED(self):
            return self.getToken(SQL_InterpreterParser.UNSIGNED, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegerType" ):
                listener.enterIntegerType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegerType" ):
                listener.exitIntegerType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntegerType" ):
                return visitor.visitIntegerType(self)
            else:
                return visitor.visitChildren(self)


    class StringTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQL_InterpreterParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(SQL_InterpreterParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringType" ):
                listener.enterStringType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringType" ):
                listener.exitStringType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringType" ):
                return visitor.visitStringType(self)
            else:
                return visitor.visitChildren(self)



    def type(self):
